# AniRecs

./: README.md
.github/workflows/: frontend-ci.yaml  main.yml
backend/: .env  Dockerfile  README.md  pyproject.toml  test.db
backend/anirecs/: config.py  database.py  main.py  models.py  oauth2.py  schemas.py
backend/anirecs/routers/: anime.py  auth.py  favourite.py  genre.py  genreAnime.py  preference.py  recommendations.py  user.py
backend/backend/: main.py
backend/tests/: conftest.py  test_anime.py  test_auth.py  test_genre.py  test_user.py
backend/volumes/: docker-compose.yml
frontend/: Dockerfile  README.md  app.vue  nuxt.config.ts  package-lock.json  package.json  pyproject.toml
frontend/components/: anime-creation-form.vue  anime-feed.vue  anime-item.vue  genre-creation-form.vue  genre-feed.vue  genre-item.vue  home-welcome.vue  login-form.vue  nav-bar.vue  recommendations-feed.vue  register-form.vue  user-favorites.vue  user-profile.vue
frontend/pages/: index.vue  recommendations.vue
frontend/pages/animes/: create.vue  index.vue
frontend/pages/auth/: index.vue  login.vue  register.vue
frontend/pages/genres/: create.vue  index.vue
frontend/pages/my/: favorites.vue  profile.vue
frontend/pages/users/: [id].vue
frontend/public/: manifest.json
frontend/src/components/auth/: login-form.tsx  signup-form.tsx
frontend/src/components/global/: nav-bar.tsx
frontend/src/components/search/: search-bar.tsx
frontend/src/routes/: index.tsx
frontend/src/routes/auth/login/: index.tsx
frontend/src/routes/auth/signup/: index.tsx
frontend/src/routes/search/: index.tsx
frontend/stores/: anime.ts  auth.ts  user.ts
frontend/utils/: types.ts
